fix: change content

--- a/user_management/templates/user_management/user_detail.html
+++ b/user_management/templates/user_management/user_detail.html
@@ -1,6 +1,6 @@
 {% extends "user_management/layout.html" %}
 {% load static %}
-{% block content %}
+{% block body %}
   <h1>{{ user.username }}</h1>
   <p>Email: {{ user.email }}</p>
   <p>Is Editor: {{ user.is_editor }}</p>
