--- a/user_management/templates/user_management/user_list.html
+++ b/user_management/templates/user_management/user_list.html
@@ -1,6 +1,6 @@
 {% extends "user_management/layout.html" %}
 
-{% block content %}
+{% block body %}
   <h1>User List</h1>
   <ul>
     {% for user in users %}
