--- a/user_management/templates/user_management/login.html
+++ b/user_management/templates/user_management/login.html
@@ -1,6 +1,6 @@
 {% extends "user_management/layout.html" %}
 
-{% block content %}
+{% block body %}
   <h2>Login</h2>
   <form method="post">
     {% csrf_token %}
