--- a/user_management/templates/user_management/layout.html
+++ b/user_management/templates/user_management/layout.html
@@ -11,7 +11,7 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container">
+        <div class="container min-vh-100 d-flex align-items-center flex-column">
             {% block body %}
             {% endblock %}
         </div>
