--- a/user_management/templates/user_management/login.html
+++ b/user_management/templates/user_management/login.html
@@ -11,15 +11,22 @@
       <form method="post">
         {% csrf_token %}
         <div class="form-group">
-          <label for="username">Username</label>
-          {{ form.username|add_class:"form-control" }}
+          <label for="username" class="mt-2 mb-1 text-secondary text-sm">
+            Username
+          </label>
+          {{ form.username|add_class:"form-control rounded-0" }}
         </div>
         <div class="form-group">
-          <label for="password">Password</label>
-          {{ form.password|add_class:"form-control" }}
+          <label for="password" class="mt-2 mb-1 text-secondary text-sm">
+            Password
+          </label>
+          {{ form.password|add_class:"form-control rounded-0" }}
         </div>
-        {% comment %} {{ form.as_p }}
-        <button type="submit">Login</button> {% endcomment %}
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary rounded-0 mt-2">
+            Login
+          </button>
+        </div>
       </form>
     </div>
   </div>
