--- a/user_management/templates/user_management/user_create.html
+++ b/user_management/templates/user_management/user_create.html
@@ -8,11 +8,31 @@
     </h1>
   </div>
   <div class="card-body">
-    <form method="post">
+    {% comment %} <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <button type="submit" class="btn btn-primary">Create User</button>
-    </form>
+    </form> {% endcomment %}
+    <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="username" class="mt-2 mb-1 text-secondary text-sm">
+            Username
+          </label>
+          {{ form.username|add_class:"form-control rounded-0" }}
+        </div>
+        <div class="form-group">
+          <label for="password" class="mt-2 mb-1 text-secondary text-sm">
+            Password
+          </label>
+          {{ form.password|add_class:"form-control rounded-0" }}
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary rounded-0 mt-2">
+            Login
+          </button>
+        </div>
+      </form>
   </div>
 </div>
 {% endblock %}
