--- a/user_management/templates/user_management/user_create.html
+++ b/user_management/templates/user_management/user_create.html
@@ -1,5 +1,5 @@
 {% extends "user_management/layout.html" %}
-
+{% load form_tags %}
 {% block body %}
 <div class="card w-50">
   <div class="card-header">
@@ -22,14 +22,32 @@
           {{ form.username|add_class:"form-control rounded-0" }}
         </div>
         <div class="form-group">
+          <label for="email" class="mt-2 mb-1 text-secondary text-sm">
+            Email
+          </label>
+          {{ form.email|add_attrs:"class:form-control rounded-0, type:email" }}
+        </div>
+        <div class="form-group">
           <label for="password" class="mt-2 mb-1 text-secondary text-sm">
             Password
           </label>
           {{ form.password|add_class:"form-control rounded-0" }}
         </div>
+        <div class="form-group form-check">
+          <label for="isreader" class="mt-2 mb-1 text-secondary text-sm form-check-label">
+            Is Reader
+          </label>
+          {{ form.is_reader|add_attrs:"class:form-check-input rounded-0, type:checkbox, id: isreader" }}
+        </div>
+        <div class="form-group form-check">
+          <label for="iseditor" class="mt-2 mb-1 text-secondary text-sm form-check-label">
+            Is Editor
+          </label>
+          {{ form.is_editor|add_attrs:"class:form-check-input rounded-0, type:checkbox, id: iseditor" }}
+        </div>
         <div class="form-group">
           <button type="submit" class="btn btn-primary rounded-0 mt-2">
-            Login
+            Register user
           </button>
         </div>
       </form>
