--- a/user_management/templates/user_management/user_create.html
+++ b/user_management/templates/user_management/user_create.html
@@ -8,12 +8,7 @@
     </h1>
   </div>
   <div class="card-body">
-    {% comment %} <form method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit" class="btn btn-primary">Create User</button>
-    </form> {% endcomment %}
-    <form method="post">
+    <form method="post" autocomplete="off">
         {% csrf_token %}
         <div class="form-group">
           <label for="username" class="mt-2 mb-1 text-secondary text-sm">
