--- a/user_management/templates/user_management/layout.html
+++ b/user_management/templates/user_management/layout.html
@@ -38,7 +38,10 @@
                         </li>
                     {% endif %}
                     <li class="nav-item my-auto">
-                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-link nav-link" style="padding: 0;">Log Out</button>
+                        </form>
                     </li>
                 {% else %}
                     <li class="nav-item my-auto">
