--- a/news/templates/news/layout.html
+++ b/news/templates/news/layout.html
@@ -12,7 +12,51 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container">
+        {% comment %} <div class="container">
+            {% block body %}
+            {% endblock %}
+        </div> {% endcomment %}
+        <div class="container min-vh-100 d-flex align-items-center flex-column">
+            <ul class="nav">
+                <li class="nav-item my-auto">
+                    {% if user.is_authenticated %}
+                        Signed in as <strong>{{ user.username }}</strong>.
+                    {% else %}
+                        Not signed in.
+                    {% endif %}
+                </li>
+                {% if user.is_authenticated %}
+                    {% if user.is_superuser %}
+                        <li class="nav-item my-auto">
+                            <a class="nav-link" href="{% url 'management:user_list' %}">User List</a>
+                        </li>
+                        <li class="nav-item my-auto">
+                            <a class="nav-link" href="{% url 'management:user_create' %}">Create User</a>
+                        </li>
+                    {% elif user.is_editor %}
+                        <li class="nav-item my-auto">
+                            <a class="nav-link" href="{% url 'article_create' %}">Create Article</a>
+                        </li>
+                        <li class="nav-item my-auto">
+                            <a class="nav-link" href="/">List of Articles</a>
+                        </li>
+                    {% endif %}
+                    <li class="nav-item my-auto">
+                        <form method="post" action="{% url 'news:logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-link nav-link" style="padding: 0;">Log Out</button>
+                        </form>
+                    </li>
+                {% else %}
+                    <li class="nav-item my-auto">
+                        <a class="nav-link" href="/login/">Log In</a>
+                    </li>
+                    <li class="nav-item my-auto">
+                        <a class="nav-link" href="/register/">Register</a>
+                    </li>
+            {% endif %}
+            </ul>
+            <hr>
             {% block body %}
             {% endblock %}
         </div>
