--- a/news/templates/news/layout.html
+++ b/news/templates/news/layout.html
@@ -35,7 +35,7 @@
                         </li>
                     {% elif user.is_editor %}
                         <li class="nav-item my-auto">
-                            <a class="nav-link" href="{% url 'article_create' %}">Create Article</a>
+                            <a class="nav-link" href="{% url 'news:article_create' %}">Create Article</a>
                         </li>
                         <li class="nav-item my-auto">
                             <a class="nav-link" href="/">List of Articles</a>
