--- a/news/templates/news/layout.html
+++ b/news/templates/news/layout.html
@@ -49,7 +49,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item my-auto">
-                        <a class="nav-link" href="/login/">Log In</a>
+                        <a class="nav-link" href="{% url 'management:login' %}">Log In</a>
                     </li>
                     <li class="nav-item my-auto">
                         <a class="nav-link" href="/register/">Register</a>
