--- a/news/templates/news/article_form.html
+++ b/news/templates/news/article_form.html
@@ -1,11 +1,75 @@
 {% extends "news/layout.html" %}
+{% load form_tags %}
 {% load static %}
 
 {% block body %}
-    <h1>Create/Edit Article</h1>
+    {% comment %} <h1>Create/Edit Article</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Save</button>
-    </form>
+    </form> {% endcomment %}
+    <div class="card w-50">
+        <div class="card-header">
+          <h1 class="text-center text-uppercase">
+            Create User
+          </h1>
+        </div>
+        <div class="card-body">
+          <form method="post" autocomplete="off">
+              {% csrf_token %}
+              <div class="form-group">
+                <label for="title" class="mt-2 mb-1 text-secondary text-sm">
+                  Title
+                </label>
+                {{ form.title|add_attrs:"class:form-control rounded-0, autocomplete:off" }}
+                {% if form.title.errors %}
+                  <div class="text-danger">{{ form.title.errors }}</div>
+                {% endif %}
+      
+              </div>
+              <div class="form-group">
+                <label for="content" class="mt-2 mb-1 text-secondary text-sm">
+                    Content
+                </label>
+                {{ form.content|add_attrs:"class:form-control rounded-0, type:textarea" }}
+                {% if form.content.errors %}
+                    <div class="text-danger">{{ form.content.errors }}</div>
+                {% endif %}
+              </div>
+              <div class="form-group">
+                <label for="author" class="mt-2 mb-1 text-secondary text-sm">
+                  Author
+                </label>
+                {{ form.author|add_class:"form-control rounded-0" }}
+                {% if form.author.errors %}
+                  <div class="text-danger">{{ form.author.errors }}</div>
+                {% endif %}
+              </div>
+              <div class="form-group">
+                <label for="image_url" class="mt-2 mb-1 text-secondary text-sm">
+                  Image URL
+                </label>
+                {{ form.image_url|add_class:"form-control rounded-0" }}
+                {% if form.image_url.errors %}
+                  <div class="text-danger">{{ form.image_url.errors }}</div>
+                {% endif %}
+              </div>
+              <div class="form-group">
+                <label for="image_url" class="mt-2 mb-1 text-secondary text-sm">
+                  Image URL
+                </label>
+                {{ form.image_url|add_class:"form-control rounded-0" }}
+                {% if form.image_url.errors %}
+                  <div class="text-danger">{{ form.image_url.errors }}</div>
+                {% endif %}
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-primary rounded-0 mt-2">
+                  Save
+                </button>
+              </div>
+            </form>
+        </div>
+      </div>
 {% endblock %}
