fix: add app prefix for routes

--- a/news/templates/news/article_confirm_delete.html
+++ b/news/templates/news/article_confirm_delete.html
@@ -7,6 +7,6 @@
         {% csrf_token %}
         <button type="submit">Yes, delete</button>
     </form>
-    <a href="{% url 'article_detail' article.id %}">Cancel</a>
+    <a href="{% url 'news:article_detail' article.id %}">Cancel</a>
 </body>
 {% endblock %}
