--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -5,7 +5,7 @@
     <h1>News Articles</h1>
     <ul>
         {% for article in articles %}
-            <li><a href="{% url 'article_detail' article.id %}">{{ article.title }}</a></li>
+            <li><a href="{% url 'news:article_detail' article.id %}">{{ article.title }}</a></li>
         {% endfor %}
     </ul>
     {% if user.is_authenticated %}
