--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block body %}
-    <h1>News Articles</h1>
+    {% comment %} <h1>News Articles</h1>
     <ul>
         {% for article in articles %}
             <li><a href="{% url 'news:article_detail' article.id %}">{{ article.title }}</a></li>
@@ -14,5 +14,38 @@
                 Create New Article
             </a>
         {% endif %}
-    {% endif %}
+    {% endif %} {% endcomment %}
+    <div class="card w-50">
+        <div class="card-header row">
+          <h1 class="text-center text-uppercase col-6">
+                News Articles
+          </h1>
+            {% if user.is_authenticated %}
+                {% if user.is_editor %}
+                    <a href="{% url 'news:article_create' %}">
+                        Create New Article
+                    </a>
+                {% endif %}
+            {% endif %}
+        </div>
+        <div class="list-group">
+          {% for user in users %}
+          <div href="{% url 'user_detail' user.id %}" 
+          class="list-group-item list-group-item-action d-flex flex-row justify-content-between" 
+          aria-current="true">
+          <a href="{% url 'user_detail' user.id %}" 
+          class="text-decoration-none col-10" 
+          aria-current="true">
+            {{ user.username }} 
+          </a>
+          <form method="post" action="{% url 'user_delete' user.id %}">
+            {% csrf_token %}
+            <button class="btn btn-danger">
+              <i class="bi bi-trash3"></i>
+            </button>
+          </form>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
 {% endblock %}
