--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="list-group">
-          {% for article in articles %}
+          {% for article in page_obj %}
           <div
           class="list-group-item list-group-item-action d-flex flex-row justify-content-between" 
           aria-current="true">
@@ -36,5 +36,19 @@
           </div>
           {% endfor %}
         </div>
-      </div>
+    </div>
+    <nav aria-label="Page navigation example" class="position-absolute down_pagination">
+      <ul class="pagination">
+          {% if page_obj.has_previous %}
+              <li class="page-item">
+                  <a class="text-decoration-none page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+              </li>
+          {% endif %}
+          {% if page_obj.has_next %}
+              <li class="page-item">
+                  <a class="text-decoration-none page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+              </li>
+          {% endif %}
+      </ul>
+  </nav>
 {% endblock %}
