fix: adding comment to the article

--- a/news/static/news/styles.css
+++ b/news/static/news/styles.css
@@ -15,3 +15,9 @@
 .text-sm {
     font-size: 0.8rem;
 }
+
+.button-display {
+    justify-content: end;
+    display: flex;
+    height: fit-content;
+}
