--- a/news/static/news/styles.css
+++ b/news/static/news/styles.css
@@ -21,3 +21,10 @@
     display: flex;
     height: fit-content;
 }
+
+.masked-image {
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover; 
+    overflow: hidden;
+}
