fix: confirm delete article

--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -30,12 +30,9 @@
                     </a>
                 </div>
                 <div class="col-2 button-display">
-                    <form method="post" action="{% url 'news:article_delete' article.id %}">
-                        {% csrf_token %}
-                        <button class="btn btn-danger">
-                          <i class="bi bi-trash3"></i>
-                        </button>
-                      </form>
+                    <a href="{% url 'news:article_delete' article.id %}" class="btn btn-danger float-end">
+                        <i class="bi bi-trash3"></i>
+                    </a>
                 </div>
             </div>
         </div>
