--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -27,12 +27,15 @@
             aria-current="true">
               {{ article.title }} 
             </a>
-            <form method="post" action="{% url 'news:article_delete' article.id %}">
+            {% comment %} <form method="post" action="{% url 'news:article_delete' article.id %}">
               {% csrf_token %}
               <button class="btn btn-danger">
                 <i class="bi bi-trash3"></i>
               </button>
-            </form>
+            </form> {% endcomment %}
+            <a href="{% url 'news:article_delete' article.id %}" class="btn btn-danger float-end">
+                <i class="bi bi-trash3"></i>
+            </a>
           </div>
           {% endfor %}
         </div>
