--- a/news/templates/news/article_confirm_delete.html
+++ b/news/templates/news/article_confirm_delete.html
@@ -2,11 +2,17 @@
 {% load static %}
 
 {% block body %}
-    <h1>Are you sure you want to delete this article?</h1>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit">Yes, delete</button>
-    </form>
-    <a href="{% url 'news:article_detail' article.id %}">Cancel</a>
-</body>
+    <div class="card w-50 mx-auto mt-5">
+        <div class="card-header">
+            <h1 class="text-center text-uppercase">Confirm Deletion</h1>
+        </div>
+        <div class="card-body text-center">
+            <p>Are you sure you want to delete this article?</p>
+            <form method="post" action="{% url 'news:article_delete' article.id %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-danger">Yes, delete</button>
+                <a href="{% url 'news:article_detail' article.id %}" class="btn btn-secondary">Cancel</a>
+            </form>
+        </div>
+    </div>
 {% endblock %}
