fix: register route and display view already done

--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -68,7 +68,7 @@
                     <button type="submit" class="btn btn-primary mt-2">Add Comment</button>
                 </form>
             {% else %}
-                <a href="{% url 'register' %}" class="btn btn-primary mt-2">Register to Add Comment</a>
+                <a href="{% url 'management:register' %}" class="btn btn-primary mt-2">Register to Add Comment</a>
             {% endif %}
         </div>
     </div>
