--- a/user_management/templates/user_management/register.html
+++ b/user_management/templates/user_management/register.html
@@ -1,5 +1,5 @@
 {% extends "user_management/layout.html" %}
-
+{% load form_tags %}
 {% block body %}
 
     <h2>Register</h2>
@@ -29,5 +29,56 @@
     <a href="{% url 'management:login' %}">
         Log In here.
     </a>
+
+    <div class="card my-auto w-50">
+        <div class="card-header">
+          <h2 class="text-center text-uppercase">
+            Register
+          </h2>
+          {% if message %}
+            <div>{{ message }}</div>
+          {% endif %}
+        </div>
+        <div class="card-body">
+          <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="username" class="mt-2 mb-1 text-secondary text-sm">
+                Username
+              </label>
+              {{ form.username|add_class:"form-control rounded-0" }}
+            </div>
+            <div class="form-group">
+                <label for="email" class="mt-2 mb-1 text-secondary text-sm">
+                  Email
+                </label>
+                {{ form.email|add_attrs:"class:form-control rounded-0, type:email" }}
+                {% if form.username.errors %}
+                  <div class="text-danger">{{ form.username.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+              <label for="password" class="mt-2 mb-1 text-secondary text-sm">
+                Password
+              </label>
+              {{ form.password|add_class:"form-control rounded-0" }}
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary rounded-0 mt-2">
+                Register
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="card-footer">
+            Already have an account? 
+            <a href="{% url 'management:login' %}">
+                Log In here.
+            </a>
+        </div>
+    </div>
 
 {% endblock %}
