--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -69,8 +69,14 @@
                         <button type="submit" class="btn btn-primary mt-2">Add Comment</button>
                     </form>
                 {% else %}
-                    <a href="{% url 'management:register' %}" class="btn btn-primary mt-2">Register to Add Comment</a>
+                    <a href="{% url 'management:register' %}" class="btn btn-success mt-2">
+                        Register to Add Comment
+                    </a>
                 {% endif %}
+            {% else %}
+                <a href="{% url 'management:register' %}" class="btn btn-success mt-2">
+                    Register to Add Comment
+                </a>
             {% endif %}
         </div>
     </div>
